# gegege

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
example/: CMakeLists.txt
example/helloworld/: helloworld.cpp
include/gegege/: assert.hpp
include/gegege/lua_engine/: lua_engine.hpp
include/gegege/otsukimi/: gl.h  graphics.hpp  lua_app.hpp  lua_graphics.hpp  lua_util.hpp  otsukimi.hpp  renderer.hpp  util.hpp
include/gegege/vulkan_engine/: descriptor.hpp  pipeline.hpp  vk_check.hpp  vulkan_engine.hpp
shaders/: gradient.comp  gradient_color.comp  sky.comp
src/: CMakeLists.txt
src/gegege/otsukimi/: .graphics.hpp.swp  graphics.cpp  main.cpp  otsukimi.cpp  util.cpp
src/gegege/vulkan_engine/: vulkan_engine.cpp
